control-plane/gateway07/gateway-api-0.7.1-custom/conformance/tests/httproute-invalid-parentref-not-matching-section-name.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-listener-not-matching-section-name
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
    namespace: gateway-conformance-infra
    port: 80
    # mismatched sectionName here (http1 is not an available gateway listener) triggers NoMatchingParent reason
    sectionName: http1
  rules:
  - backendRefs:
    - name: infra-backend-v1
      kind: Service
      port: 8080
